<resources>
    <string name="app_name" translatable="false">언링크 파이어월</string>
    <string name="app_copyright" translatable="false">Copyright \u00A9 2015–2019 by M. Bokhorst (M66B)</string>
    <string name="app_android">언링크 파이어월는 안드로이드 5.1 이상부터 작동합니다</string>
    <string name="app_xposed">루팅 같은 불건전한 행동은 하지 맙시다</string>
    <string name="app_eula" translatable="false">THIS SOFTWARE IS PROVIDED BY THE AUTHOR \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="app_privacy"><a href="https://www.redev-5c.github.io/kiwiplay.html/">개인정보처리방침</a></string>
    <string name="app_first">언링크 파이어월에 오신 것을 환영합니다! 모든 앱이 작동한다는 책임은 질 수 없으니 본인의 책임 하에 사용하시기 바랍니다</string>
    <string name="app_agree">동의</string>
    <string name="app_disagree">거부</string>
    <string name="app_support">원본 제작자 Faircode님께 문의하기</string>
    <string name="channel_foreground">실행되고 있는 서비스</string>
    <string name="channel_notify">일반 알림</string>
    <string name="channel_access">접근 권한 알림</string>
    <string name="menu_search">앱 검색하기</string>
    <string name="menu_filter">Filter apps</string>
    <string name="menu_app_user">Show user apps</string>
    <string name="menu_app_system">Show system apps</string>
    <string name="menu_app_nointernet">인터넷 연결이 없는 앱 보여주기</string>
    <string name="menu_app_disabled">차단된 앱 보여주기</string>
    <string name="menu_sort">Sort apps</string>
    <string name="menu_sort_name">이름으로 정렬하기</string>
    <string name="menu_sort_uid">UID로 정렬하기</string>
    <string name="menu_sort_data">Sort on data usage</string>
    <string name="menu_log">Show log</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_legend">Legend</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="menu_apps">Other apps</string>
    <string name="menu_protocol_udp" translatable="false">UDP</string>
    <string name="menu_protocol_tcp" translatable="false">TCP</string>
    <string name="menu_protocol_other">Other</string>
    <string name="menu_traffic_allowed">Allowed</string>
    <string name="menu_traffic_blocked">Blocked</string>
    <string name="menu_live">Live updates</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_resolve">Show names</string>
    <string name="menu_organization">Show organization</string>
    <string name="menu_pcap_enabled">PCAP enabled</string>
    <string name="menu_pcap_export">PCAP export</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_export">Export</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cleanup">Cleanup</string>
    <string name="title_protocol">Protocol</string>
    <string name="title_dport">Source port</string>
    <string name="title_raddr">Destination address</string>
    <string name="title_rport">Destination port</string>
    <string name="title_ruid">Destination app</string>
    <string name="title_external">For an external server select \'nobody\'</string>
    <string name="setting_defaults">Defaults (white/blacklist)</string>
    <string name="setting_whitelist_wifi">Block Wi-Fi</string>
    <string name="setting_whitelist_other">Block mobile</string>
    <string name="setting_screen_wifi">화면이 켜져 있을 때 Wi-Fi 허용하기</string>
    <string name="setting_screen_other">화면이 켜져 있을 때 모바일 데이터 허용하기</string>
    <string name="setting_whitelist_roaming">로밍 시 차단하기</string>
    <string name="setting_options">Options</string>
    <string name="setting_theme">Theme: %1$s</string>
    <string name="setting_dark">Use dark theme</string>
    <string name="setting_install">Notify on new install</string>
    <string name="setting_screen_on">Apply \'when screen on\' rules</string>
    <string name="setting_auto">Auto enable after %1$s minutes</string>
    <string name="setting_delay">Delay screen off %1$s minutes</string>
    <string name="setting_update">Check for updates</string>
    <string name="setting_network_options">Network options</string>
    <string name="setting_subnet">Subnet routing</string>
    <string name="setting_tethering">Allow tethering</string>
    <string name="setting_lan">Allow LAN access</string>
    <string name="setting_ip6">Enable IPv6 traffic</string>
    <string name="setting_wifi_home">Wi-Fi home networks: %1$s</string>
    <string name="setting_metered">Handle metered Wi-Fi networks</string>
    <string name="setting_metered_2g">Consider 2G unmetered</string>
    <string name="setting_metered_3g">Consider 3G unmetered</string>
    <string name="setting_metered_4g">Consider LTE unmetered</string>
    <string name="setting_national_roaming">Ignore national roaming</string>
    <string name="setting_eu_roaming">Ignore EU roaming</string>
    <string name="setting_call">Disable on call</string>
    <string name="setting_lockdown_wifi">Lockdown Wi-Fi</string>
    <string name="setting_lockdown_other">Lockdown mobile</string>
    <string name="setting_reload_onconnectivity">Reload on every connectivity change</string>
    <string name="setting_advanced_options">Advanced options</string>
    <string name="setting_system">Manage system apps</string>
    <string name="setting_log_app">Log internet access</string>
    <string name="setting_access">Notify on internet access</string>
    <string name="setting_filter">Filter traffic</string>
    <string name="setting_filter_udp">Filter UDP traffic</string>
    <string name="setting_handover">Seamless VPN handover on reload</string>
    <string name="setting_clear_onreload">Close connections on reload</string>
    <string name="setting_lockdown">Lockdown traffic</string>
    <string name="setting_track_usage">Track network usage</string>
    <string name="setting_reset_usage">Reset network usage</string>
    <string name="setting_show_resolved">Show resolved domain names</string>
    <string name="setting_block_domains">Block domain names</string>
    <string name="setting_rcode">DNS response code: %s</string>
    <string name="setting_forwarding">Port forwarding</string>
    <string name="setting_vpn4">VPN IPv4: %s</string>
    <string name="setting_vpn6">VPN IPv6: %s</string>
    <string name="setting_dns">VPN DNS: %s</string>
    <string name="setting_validate">Validate at: %s</string>
    <string name="setting_ttl">Minimum DNS TTL: %s s</string>
    <string name="setting_socks5_enabled">Use SOCKS5 proxy</string>
    <string name="setting_socks5_addr">SOCKS5 address: %s</string>
    <string name="setting_socks5_port">SOCKS5 port: %s</string>
    <string name="setting_socks5_username">SOCKS5 username: %s</string>
    <string name="setting_socks5_password">SOCKS5 password: %s</string>
    <string name="setting_pcap_record_size">PCAP record size: %s B</string>
    <string name="setting_pcap_file_size">PCAP max. file size: %s MB</string>
    <string name="setting_watchdog">Watchdog: every %s minutes</string>
    <string name="setting_stats_category">Speed notification</string>
    <string name="setting_stats">Show speed notification</string>
    <string name="setting_stats_top">Show top apps</string>
    <string name="setting_stats_frequency">Sample interval: %s ms</string>
    <string name="setting_stats_samples">Number of samples: %s s</string>
    <string name="setting_backup">Backup</string>
    <string name="setting_export">Export settings</string>
    <string name="setting_import">Import settings</string>
    <string name="setting_hosts">Import hosts file</string>
    <string name="setting_hosts_append">Import hosts file (append)</string>
    <string name="setting_hosts_url">Hosts file download URL</string>
    <string name="setting_hosts_download">Download hosts file</string>
    <string name="setting_technical">Technical information</string>
    <string name="setting_technical_general">General</string>
    <string name="setting_technical_networks">Networks</string>
    <string name="setting_technical_subscription">Subscriptions</string>
    <string name="summary_install">Show status bar notification to directly configure newly installed apps (pro feature)</string>
    <string name="summary_auto">After disabling using the widget, automatically enable 언링크 파이어월 again after the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_delay">After turning the screen off, keep screen on rules active for the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_update">Check for new releases on GitHub twice daily</string>
    <string name="summary_tethering">Depending on the Android version, tethering may work or may not work. Tethered traffic cannot be filtered.</string>
    <string name="summary_subnet">Enable subnet routing; might enable Wi-Fi calling, but might also trigger bugs in Android and increase battery usage</string>
    <string name="summary_lan">Allow apps to connect to local area network addresses, like 10.0.0.0/8, 172.16.0.0/12 and 192.168.0.0/16</string>
    <string name="summary_ip6">Route IP version 6 traffic to 언링크 파이어월 so it can selectively be allowed or blocked</string>
    <string name="summary_wifi_home">Apply Wi-Fi network rules for selected network only (apply mobile network rules for other Wi-Fi networks)</string>
    <string name="summary_metered">Apply mobile network rules to metered (paid, tethered) Wi-Fi networks</string>
    <string name="summary_metered_2g">Apply Wi-Fi network rules for 2G data connections</string>
    <string name="summary_metered_3g">Apply Wi-Fi network rules for 3G data connections</string>
    <string name="summary_metered_4g">Apply Wi-Fi network rules for LTE data connections</string>
    <string name="msg_disabled">언링크 파이어월는 VPN 연결을 필요로 합니다. 스위치 버튼을 탭해 주세요!</string>
    <string name="msg_filter">Using filtering will cause Android to attribute data and power usage to 언링크 파이어월 - Android assumes the data and power are being used by 언링크 파이어월, rather than the original apps</string>
    <string name="msg_filter4">Android 4 requires filtering to be enabled</string>
    <string name="msg_usage">앱 우측의 와이파이와 데이터 아이콘을 터치하여 인터넷 연결 여부를 설정할 수 있어요.</string>
    <string name="msg_fairemail">오픈소스 개발자 FairCode에게 큰 찬사를 보냅시다!</string>
    <string name="msg_whitelist">Internet access is allowed by default (blacklist mode), this can be changed in the settings</string>
    <string name="msg_push">다양한 푸시 메시지는 구글 플레이 서비스가 처리합니다. 인터넷 연결이 기본적으로 활성화 되어 있죠.</string>
    <string name="msg_system">시스템 앱 (전화, 메시지, 통신사 앱 등)을 조정하는 방법은 연구 중에 있어요!</string>
    <string name="title_enable_logging">Enable logging of blocked addresses only</string>
    <string name="title_enable_filtering">Enable filtering to log allowed addresses too</string>
    <string name="title_enable_notify">Enable access notifications for newly logged addresses</string>
    <string name="title_enable_help0">These settings are global settings that apply to all apps</string>
    <string name="title_enable_help1">Filtering is also required to allow or block individual addresses</string>
    <string name="title_enable_help2">Enabling logging (less) or filtering (more) might increase battery usage and might affect network speed</string>
</resources>