<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menugrip"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="언링크 파이어월 설정"
                android:textAlignment="center"
                android:textSize="36sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDisabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/msg_disabled"
            android:textAppearance="@style/TextMedium"
            android:textColor="?attr/colorOff"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llUsage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/msg_usage"
                android:textAppearance="@style/TextSmall" />

            <Button
                android:id="@+id/btnUsage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@android:string/ok"
                android:textAppearance="@style/TextSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFairEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvFairEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/msg_fairemail"
                android:textAppearance="@style/TextSmall" />

            <Button
                android:id="@+id/btnFairEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@android:string/ok"
                android:textAppearance="@style/TextSmall" />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:background="@color/colorGrayed"
                android:id="@+id/rvApplication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/llWhitelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/msg_whitelist"
                android:textAppearance="@style/TextSmall" />

            <Button
                android:id="@+id/btnWhitelist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@android:string/ok"
                android:textAppearance="@style/TextMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPush"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/msg_push"
                android:textAppearance="@style/TextSmall" />

            <Button
                android:id="@+id/btnPush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@android:string/ok"
                android:textAppearance="@style/TextSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/msg_system"
                android:textAppearance="@style/TextSmall" />

            <Button
                android:id="@+id/btnSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@android:string/ok"
                android:textAppearance="@style/TextSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/vwPopupAnchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
</RelativeLayout>
